--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "Lionel Karlen <lionel.karlen@protonmail.ch>",
   "license": "MIT",
   "dependencies": {
-    "rummy-lib": "^1.0.1",
+    "rummy-lib": "latest",
     "typescript": "^4.4.4"
   },
   "scripts": {
-	  "start": "ts-node ./index.ts",
-	  "lint": "prettier --write \"src/{*.ts,**/*.ts}\"",
-	  "debug": "ts-node ./src/debug.ts"
+    "start": "ts-node ./index.ts",
+    "lint": "prettier --write \"src/{*.ts,**/*.ts}\"",
+    "debug": "ts-node ./src/debug.ts"
   },
   "devDependencies": {
+    "@types/node": "^16.11.7",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0"
   }
