--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "author": "Lionel Karlen <lionel.karlen@protonmail.ch>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.2",
     "rummy-lib": "latest",
+    "socket.io": "^4.4.1",
     "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "ts-node ./index.ts",
     "lint": "prettier --write \"src/{*.ts,**/*.ts}\"",
-    "debug": "ts-node ./src/debug.ts"
+    "debug": "ts-node ./src/debug.ts",
+    "serve": "ts-node ./server.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
+    "@types/socket.io": "^3.0.2",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0"
   }
